2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>

	* help/C/baobab.xml: editing help file

2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/.cvsignore: updated

2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.glade:
	* src/baobab-treeview.c: (on_tv_button_press):
	* src/baobab-utils.c: (popupmenu_list), (popupmenu_list_search):
	* src/baobab-utils.h:

	Fixed: #339521

2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.1: updated man page

2006-04-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* data/baobab.glade:  Many HIG changes, including capitalization, 
	widget layout, menu layout, and more. 
	* src/baobab-remote-connect-dialog.c:
	(baobab_remote_connect_dialog_init):  Fix window title 
	capitalization.
	* src/baobab-utils.c: (dir_select):  Fix window title 
	capitalization.
	* src/baobab-treeview.c: (create_search_model):  Update to
	updated menu item.
	
2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/Makefile.am: Revert the libglade hack, and add a BFN
	about it.

	* pixmaps/Makefile.am: Use datadir instead of pkgdatadir.

	* help/.cvsignore: Update.

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* *: Initial import inside gnome-utils.

2006-04-22  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-utils.c: fixed bug on deleting files

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* configure.ac:

        Bumped post-release version

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* Makefile.am:
	* NEWS:
	* configure.ac:
   
        Released v.2.4.1

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* baobab.glade:
	* po/it.po:
	* src/baobab-treeview.c: 
	* src/baobab-utils.c: 
	* src/baobab-utils.h:
	* src/baobab.c: 
	* src/callbacks.c: 
	* src/callbacks.h:

	Added treemap item in View Menu

2006-04-21  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/Makefile.am:
	* src/baobab-scan.c: moved hardlinks.c here
	* src/baobab-scan.h: move hardlinks.h here
