@@ -54,5 +54,6 @@ gboolean trash_file (const gchar *filename);
 void contents_changed (void);
 GdkPixbuf * baobab_load_pixbuf (const gchar *filename);
 void set_glade_widget_sens (const gchar *name, gboolean sens);
+gboolean baobab_help_display (GtkWindow *parent, const gchar *file_name, const gchar *link_id);
 
 #endif /* __BAOBAB_UTILS_H__ */
